# papera

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/docs/: ARCHITECTURE.md  JOURNAL.md  OVERVIEW.md  TODO.md
.agents/docs/LTM/: INDEX.md  datafusion-target-dialect.md  duckdb-compatibility-and-feature-coverage.md  library-api-and-target-dialect-synthesis.md  library-packaging-and-public-api.md  serde-class-resolver.md  sql-transpilation-system-synthesis.md  transpilation-pipeline-and-dialect-architecture.md
.agents/skills/deep-sleep/: SKILL.md
.agents/skills/distill-memories/: SKILL.md
.agents/skills/good-sleep/: SKILL.md
.github/workflows/: ci.yml
examples/: basic.rs  migration.rs  multi_statement.rs  serde_resolver.rs
src/: error.rs  lib.rs  main.rs
src/dialect/: hive.rs  mod.rs  redshift.rs  trino.rs
src/transforms/: ddl.rs  dml.rs  format_strings.rs  functions.rs  lateral.rs  mod.rs  show.rs  types.rs  unnest.rs
src/transpiler/: mod.rs  rewrite.rs
tests/: datafusion_integration.rs  duckdb_integration.rs  integration.rs
tests/common/: mod.rs
